# ReflectBench

./: .gitignore  Taskfile.yaml  plan.md  pyproject.toml  requirements-dev.txt
.github/workflows/: docs-deploy.yml  docs-link-check.yml  static-analysis.yml
.opencode/skills/doc-bd-dep/: SKILL.md  TEMPLATE.md
.opencode/skills/doc-dd-dep/: SKILL.md  TEMPLATE.md
app/artifacts/: handler.py
app/common/: api.py  batch.py  models.py
app/list_runs/: handler.py
app/orchestrator/: handler.py  projection.py  prompts.py
app/repair_run/: handler.py
app/start_run/: handler.py
app/status/: handler.py
docs/: index.md
docs/1.要求(RQ)/01.プロジェクトの目的(PP)/: RQ-PP-001.md
docs/1.要求(RQ)/02.プロジェクトのスコープ(SC)/: RQ-SC-001.md
docs/1.要求(RQ)/11.ステークホルダー(SH)/: RQ-SH-001.md  RQ-SH-002.md
docs/1.要求(RQ)/12.プロジェクトの制約(PC)/: RQ-PC-001.md
docs/1.要求(RQ)/21.用語(GL)/: RQ-GL-001.md  RQ-GL-002.md  RQ-GL-003.md  RQ-GL-004.md  RQ-GL-005.md  RQ-GL-006.md  RQ-GL-007.md  RQ-GL-008.md  RQ-GL-009.md  RQ-GL-010.md  (+5 more)
infra/: README.md  app.py
infra/stacks/: experiment_stack.py
report/99ac6373-98ad-4ae2-b911-030b05e64450/: artifact_blog_report.md  artifact_blog_report_ja.md
reports/: doc_check.md  docs_fix_tickets_2026-02-28.md  docs_review_2026-02-28.md  implementation_tasks_dynamodb.md
scripts/: validate_vault.py
tests/: test_artifacts_handler.py  test_experiment_stack.py  test_list_runs_handler.py  test_orchestrator_handler.py  test_orchestrator_ut_cases.py  test_repair_run_handler.py  test_start_run_handler.py  test_status_handler.py
tests/fixtures/: bedrock_batch_output_samples.jsonl
(+130 files in other folders)
